force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/nFORCE__Business_Activity_Execution__c.object-meta.xml
<CustomObject>
    <description>This object represents the individual business activity that the system ran as part of a business process and maintains the state of the business activity during its execution</description>
    <label>Business Activity Execution</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Business Activity Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Activity Executions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>