force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Config_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Config_Template_Name__c</fullName>
    <description>The system automatically populates this required string field with the business process key it is associated with.</description>
    <inlineHelpText>This automatically populated field displays the business process key it is associated with.</inlineHelpText>
    <label>Business Process Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>