force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Correlation_Id__c</fullName>
    <description>The system automatically populates this required string field with an ID that refers to all Business Activity executions in the scope of this executing business process.</description>
    <inlineHelpText>This automatically populated field displays an ID that refers to all Business Activity executions in the scope of this executing business process.</inlineHelpText>
    <label>Correlation Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>