force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Duration__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Duration__c</fullName>
    <description>UThe system automatically populates this optional field with the end-to-end processing time of this Business Activity execution that includes queued wait times.</description>
    <formula>nFORCE__FinalTimestamp__c - nFORCE__Timestamp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This automatically populated field displays the end-to-end processing time of this Business Activity execution.</inlineHelpText>
    <label>Execution Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>