force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__External_Id__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__External_Id__c</fullName>
    <description>The system automatically populates this required string field with an ID that refers to this Business Activity execution.</description>
    <externalId>true</externalId>
    <inlineHelpText>This automatically populated field displays an ID that refers to this Business Activity.</inlineHelpText>
    <label>External Id</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>