force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Finalization_Complete__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Finalization_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this field to indicate if this Business Activity execution has completed all finalization processes. By default, it is false.</description>
    <inlineHelpText>This automatically populated field displays whether the Business Activity execution is complete.</inlineHelpText>
    <label>Finalization Is Complete</label>
    <type>Checkbox</type>
</CustomField>