force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Finalization_Enqueued__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Finalization_Enqueued__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this field to indicate if a finalization process has been enqueued. By default, it is false.</description>
    <inlineHelpText>This automatically populated field displays whether a finalization process has been enqueued.</inlineHelpText>
    <label>Finalization Handler Is Enqueued</label>
    <type>Checkbox</type>
</CustomField>