force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__FinalTimestamp__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__FinalTimestamp__c</fullName>
    <description>The system automatically populates this required field to capture the timestamp of completion of the Business Activity execution.</description>
    <inlineHelpText>This automatically populated field displays the completion timestamp of the Business Activity.</inlineHelpText>
    <label>Final Timestamp</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>