force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__FQCN__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__FQCN__c</fullName>
    <description>The system automatically populates this required text field with the fully qualified class name of the Business Activity handler.</description>
    <inlineHelpText>This automatically populated field displays the fully qualified class name of the business activity handler.</inlineHelpText>
    <label>Fully Qualified Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>