force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Message__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Message__c</fullName>
    <description>The system automatically populates this optional text field with the most recent relevant message determined by the Business Activity execution handler. By default, it is blank.</description>
    <inlineHelpText>This automatically populated field displays the most recent message determined by the Business Activity execution handler.</inlineHelpText>
    <label>Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>