force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Parent_Activity__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Parent_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional field with the parent Business Activity execution record to which this Business Activity execution is associated. By default, it is blank.</description>
    <inlineHelpText>This automatically populated field displays the parent Business Activity execution record to which this Business Activity execution is associated.</inlineHelpText>
    <label>Parent Activity</label>
    <referenceTo>nFORCE__Business_Activity_Execution__c</referenceTo>
    <relationshipLabel>Business Activity Execution</relationshipLabel>
    <relationshipName>childActivityExecution</relationshipName>
    <type>Lookup</type>
</CustomField>