force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Perform_Async__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Perform_Async__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this checkbox field to indicate that this Business Activity execution runs asynchronously or not. By default, it is false.</description>
    <inlineHelpText>This automatically selected checkbox displays whether this Business Activity execution runs asynchronously or not.</inlineHelpText>
    <label>Perform Async</label>
    <type>Checkbox</type>
</CustomField>