force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Publish__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional field to indicate that this Business Activity execution has been published or not. By default, it is false.</description>
    <inlineHelpText>This automatically populated field indicates that this Business Activity execution has been published or not.</inlineHelpText>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>