force-app/main/default/objects/nFORCE__Business_Activity_Execution__c/fields/nFORCE__Scheduled_CRON_Expr__c.field-meta.xml
<CustomField>
    <fullName>nFORCE__Scheduled_CRON_Expr__c</fullName>
    <description>The system automatically populates this optional field with the Salesforce compatible CRON expression representing the future time to be published. By default, it is blank.</description>
    <inlineHelpText>This automatically populated field displays the CRON expression.</inlineHelpText>
    <label>Scheduled Job CRON Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>